contestdojo-api/contestdojo-api_apps-v1_Deployment_contestdojo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contestdojo-api
  namespace: contestdojo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contestdojo-api
  template:
    metadata:
      labels:
        app: contestdojo-api
    spec:
      containers:
      - env:
        - name: OIDC_AUDIENCE
          value: https://api.contestdojo.com
        - name: OIDC_ISSUER
          value: https://contestdojo.com/api/oidc
        image: ghcr.io/contestdojo/api:main
        imagePullPolicy: Always
        name: contestdojo-api
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 50m
            memory: 50Mi
