contestdojo-api/contestdojo-api_v1_Service_contestdojo-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: contestdojo-api
  namespace: contestdojo-api
spec:
  ports:
  - port: 8000
  selector:
    app: contestdojo-api
