contestdojo-api/contestdojo-api_networking.k8s.io-v1_Ingress_contestdojo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: contestdojo-api-ingress
  namespace: contestdojo-api
spec:
  ingressClassName: nginx
  rules:
  - host: api.contestdojo.com
    http:
      paths:
      - backend:
          service:
            name: contestdojo-api
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.contestdojo.com
    secretName: contestdojo-api-ingress-tls
